syntax = "proto3";

package core.v1;

option go_package = "ijkcode.tech/volumixer/proto/core/v1;corev1";

service CoreService {
  rpc Health(HealthRequest) returns (HealthResponse) {}
  rpc ServerInfo(ServerInfoRequest) returns (ServerInfoResponse) {}
}

message HealthRequest {}
message HealthResponse {}

message ServerInfoRequest {}
message ServerInfoResponse {
  string server_version = 1;
  string server_platform = 2;
}
