syntax = "proto3";

package widget.v1;

option go_package = "ijkcode.tech/volumixer/proto/widget/v1;widgetv1";

message VolumeComponent {
  float level = 1;
  bool muted = 2;
}

